chore: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,12 @@
 [Rr]elease/
 x64/
 x86/
+**/x64/
+**/x86/
 [Bb]in/
 [Oo]bj/
+**/[Bb]in/
+**/[Oo]bj/
 
 # Visual C++ Cache & Logs
 *.sdf
@@ -29,3 +33,59 @@ x86/
 *.pdb
 *.ilk
 *.exp
+
+# Additional C/C++ build artifacts
+*.obj
+*.iobj
+*.ipdb
+*.dll
+*.lib
+
+# Platform-specific build output
+ARM/
+ARM64/
+
+# WinUI 3 generated files (XAML codegen)
+quiz-examination-system/Generated Files/
+**/Generated Files/
+**/*.g.cpp
+**/*.g.h
+**/*.g.hpp
+**/*.xbf
+**/XamlTypeInfo.g.cpp
+**/XamlMetaDataProvider.g.cpp
+
+# App packaging outputs (MSIX/AppX)
+AppPackages/
+*.appx
+*.appxbundle
+*.msix
+*.msixbundle
+*.msixupload
+**/*.msixsym
+quiz-examination-system/quiz-exa.*
+
+# NuGet packages (restore on build)
+packages/**
+!packages/build/
+quiz-examination-system/packages/
+
+# Additional caches and temporary databases
+*.opendb
+*.db
+*.cache
+*.cachefile
+*.dat
+*.db-wal
+*.db-shm
+*.tmp
+*.pyc
+.vs/
+**/.vs/
+*.VC.db
+*.VC.VC.opendb
+*.sln.docstates
+*.user
+*.rsuser
+*.vcxproj.user
+*.tlog
