Add new asset images for application branding
- Added LockScreenLogo.scale-200.png for lock screen branding.
- Added SplashScreen.scale-200.png for splash screen branding.
- Added Square150x150Logo.scale-200.png for app icon branding.
- Added Square44x44Logo.scale-200.png for small app icon branding.
- Added Square44x44Logo.targetsize-24_altform-unplated.png for alternative small icon.
- Added StoreLogo.png for store branding.
- Added Wide310x150Logo.scale-200.png for wide logo branding.

--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,11 @@ quiz-examination-system/packages/
 *.rsuser
 *.vcxproj.user
 *.tlog
+
+# Docker & Environment Files
+.env
+docker-compose.override.yml
+
+# Documentation & Development Notes
+quiz-examination-system/DATABASE_SCHEMA.md
+quiz-examination-system/checklist.md
